# lab1/backend/src/main/kotlin/com/serezk4/model/CustomUserDetails.kt
@@ -11,13 +11,13 @@ data class CustomUserDetails(
     @JsonProperty("resource_access") val resourceAccess: Map<String, ResourceRoles>,
     @JsonProperty("iss") val issuer: String,
     @JsonProperty("preferred_username") val preferredUsername: String,
-    @JsonProperty("given_name") val givenName: String,
+    @JsonProperty("given_name") val givenName: String? = null,
     @JsonProperty("family_name") val familyName: String? = null,
     @JsonProperty("sid") val sid: String,
     @JsonProperty("acr") val acr: String,
     @JsonProperty("azp") val azp: String,
     @JsonProperty("scope") val scope: String,
-    @JsonProperty("name") val name: String,
+    @JsonProperty("name") val name: String? = null,
     @JsonProperty("email") val email: String,
     @JsonProperty("exp") val exp: Instant,
     @JsonProperty("iat") val iat: Instant,
